# bin_pose_emulator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
bin_pose_emulator/: CMakeLists.txt  package.xml
bin_pose_emulator/config/: example_config.yaml
bin_pose_emulator/include/bin_pose_emulator/: bin_pose_emulator.h
bin_pose_emulator/src/: bin_pose_emulator.cpp  main.cpp
bin_pose_msgs/: package.xml
config/: example_config.yaml
include/: bin_pose_emulator.h
launch/: bin_pose_emulator.launch
src/: bin_pose_emulator.cpp  main.cpp
